5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1756_1583.log
== TEST (2019-05-29 00:08:11) 
-- CODE:
from numpy import*

x = str(input("string: "))

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:08:45) 
-- CODE:
from numpy import*

x = str(input("string: "))

print(x[:2])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:08:59) 
-- CODE:
from numpy import*

x = str(input("string: "))

print(x[:3])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:09:52) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3 #variavel de trio

print(x[:c])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:10:56) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3 #variavel de trio
s = len(x)/3

print(s)
print(x[:c])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:30:27) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3         #variavel de trio
s = len(x)/3  #tamaho e limite
y = arange(s)
i = 0         #indice

while i < s:
	if y[i] = y[-1]:
		i = i + 1
	else:
		y[i] = 

print(s)
print(x[:c])
-- ERROR:
File "XXXX", line 11
    if y[i] = y[-1]:
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:39:10) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
e = ((s * 3) + (-1 * s) )
y = zeros(e) #vetor imagem
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3
print(y)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:39:38) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
e = ((s * 3) + (-1 * s) )
y = zeros[e] #vetor imagem
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3
print(y)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:40:34) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
e = ((s * 3) + (-1 * s) )
y = arange(e) #vetor imagem
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3
print(y)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:42:08) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
e = ((s * 3) + (-1 * s) )
y = arange(e) #vetor imagem
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3

print(x)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:43:27) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3

print(x)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:43:27) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3

print(x)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:43:27) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3

print(x)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:43:29) 
-- CODE:
from numpy import*

x = str(input("string: "))

c = 3            #variavel de trio
s = len(x)/3     #tamaho e limite
i = 0            #indice
a1 = 0           #posicao 1
a2 = 1           #posicao 2
a3 = 3           #posicao 3

print(x)
while i > s:
	if s == 1:
		i = i + 1
	elif s == 2:
		y[a1] = x[a1]
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:48:17) 
-- CODE:
from numpy import*

x = str(input("string: "))

s = len(x)/3     #tamaho e limite
i = 0            #indice
y = 0            #string imagem

while i > s:
	if x[i] == x[-1]:
		i = i + 1
		y = y + x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:49:28) 
-- CODE:
from numpy import*

x = str(input("string: "))

s = len(x)/3     #tamaho e limite
i = 0            #indice
y = 0            #string imagem

while i > s:
	if x[i:] == x[-1]:
		i = i + 1
		y = y + x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:54:51) 
-- CODE:
from numpy import*

x = str(input("string: "))

s = len(x)/3     #tamaho e limite
i = 0            #indice
y = 0            #string imagem
t = 2

while i > s:
	if (x[t:] == x[-3:]) or (x[0:]:
		i = i + 1
		y = y + x[i]
print(y)
-- ERROR:
File "XXXX", line 11
    if (x[t:] == x[-3:]) or (x[0:]:
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:55:06) 
-- CODE:
from numpy import*

x = str(input("string: "))

s = len(x)/3     #tamaho e limite
i = 0            #indice
y = 0            #string imagem
t = 2

while i > s:
	if (x[t:] == x[-3:]) or (x[0:] == x[-3]):
		i = i + 1
		y = y + x[i]
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
